# Mosaic

./: .gitignore  .pre-commit-config.yaml  .vscodeignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  NGINX_CONFIG.md  README.md  _config.yml  bump.py  design.md  index.md  moon.yml  package-lock.json  package.json  package.json.license  pyproject.toml  ruff.toml  shadow-cljs.edn
.claude/: mcp.json
.clj-kondo/: config.edn
.github/: dependabot.yml
.github/workflows/: main.yml
.reuse/: dep5
LICENSES/: MIT.txt
Prototype/: readme.md
Wireframes/: readme.md
_layouts/: default.html
app/: editor.html  index.html
app/css/: style.css
app/editor/: index.html
app/js/: anywidget.js  common.js  editor.js  filestore.js  libman.js  main.js  manifest.edn
app/notebook/: index.html
app/notebook/assets/: ConnectedDataExplorerComponent-DfaDXbmu.js  _baseUniq-BTBn1o_U.js  architectureDiagram-IEHRJDOE-BmLknE91.js  chunk-D6G4REZN-CSfqKnNE.js  chunk-XZIHB7SX-CxO_ua0_.js  clone-B_oqkL1y.js  data-editor-DlI--f5I.js  diagram-SSKATNLV-vvZ_fGR-.js  diagram-VNBRO52H-Y1c0dm-Q.js  erDiagram-Q7BY3M3F-Do1k_d6X.js  ganttDiagram-APWFNJXF-Bah15eFD.js  index-BHWDo0SJ.js  index-BfQujoc3.js  index-ClIpEuqy.js  index-Crlijsf-.js  index-CtknHNa6.js  index-O2nR5_1b.js  index-e6nykhg-.js  layout-BzszAGT3.js  quadrantDiagram-7GDLP6J5-Dxufikgy.js  radar-MK3ICKWK-_li6gpjw.js  run-page-CHaAAOzr.js  save-worker-BDcz2hJn.js  shutdown-button-DPmuCF_V.js  slides-component-BV_PGMRS.js  stateDiagram-DGXRK772-DrWgCABl.js  storage-CIvwacNq.js  terminal-BKOpNk0B.js  worker-D9uxCaRv.js
assets/css/: style.scss
docs/: Annotations.md  Architecture.md  Deployment.md  Documentation.md  Editor-overview.md  Getting-started-instructions.md  Keyboard-shortcuts.md  Library-Manager-Overview.md  MCP-Server.md  Mosaic-design-Personas.md  Mosaic-design-Requirements.md  Mosaic-design:-Personas.md  Mosaic-design:-Requirements.md  PDK-management.md  Python-API.md  Simulator-overview.md  Video-tutorials.md  _config.yml  index.md
docs/Mosaic Logo Designs/: Mosaic Logo Design.xd
docs/Prototype/: Source File.xd
docs/Wireframes/: High-Fidelity Wireframes (Source File).xd
docs/_layouts/: default.html
docs/app/: index.html
docs/app/css/: style.css
docs/app/js/: anywidget.js  editor.js  filestore.js
docs/app/notebook/: index.html
docs/app/notebook/assets/: ImageComparisonComponent-Dk-2ARU4.js  VegaLite-D_9sSEjl.js  _baseEach-Db3oykFl.js  _baseMap-YxkxzdBo.js  _createAggregator-DLooNR_b.js  any-language-editor-BL3QIolu.js  blockDiagram-JOT3LUYC-BuAVX2La.js  c4Diagram-VJAJSXHY-Dw0p6PD5.js  channel-BqpxxKuX.js  chunk-4BMEZGHF-CRrk-vlJ.js  chunk-A2AXSNBT-D4smHg1h.js  chunk-AEK57VVT-DSfK4MvV.js  chunk-RZ5BOZE2-CiFTbNI7.js  circle-play-DQ5ulCX1.js  classDiagram-v2-COTLJTTW-DbS17HjD.js  compile-DMqlw2f3.js  cytoscape.esm-C11VZyMT.js  dagre-OKDRZEBW-BhLoHxDu.js  edit-page-ukPTn1w4.js  flowDiagram-4HSFHLVR-B2_mO5H-.js  gitGraphDiagram-7IBYFJ6S-pPeJnRL0.js  graph-Bvep3vGL.js  home-page-ClTDSk-b.js  index-BRKrWs_D.js  index-BVt8Dtzn.css  index-BwHkBbgG.js  index-C1g5-CPL.js  index-ChUupid3.js  index-Cs1EDFdZ.js  index-Cx_Febir.js  index-Cz3-y_u2.js  index-D0nOPH95.js  index-DP2Hem3Q.js  index-D_KrWDAY.js  index-_Zd2Tjcq.js  index-mKg8eShI.js  infoDiagram-PH2N3AL5-CBYlsZ6V.js  journeyDiagram-U35MCT3I-DeDhp64X.js  kanban-definition-NDS4AKOZ-CRX4JdQe.js  linear-D5JcW2cD.js  (+16 more)
docs/assets/css/: style.scss
public/: editor.html  index.html
public/auth/: index.html
public/css/: style.css
public/css/icons/: Logo.svg.license
public/editor/: index.html
python/: .gitignore
python/nyancad/: README.md  pyproject.toml
python/nyancad-kfactory/: .gitignore  pyproject.toml
python/nyancad-kfactory/examples/: inverter_to_gds.py
python/nyancad-kfactory/nyancad_kfactory/: __init__.py  convert.py  geometry.py  routing.py
python/nyancad-kfactory/tests/: test_convert.py  test_geometry.py  test_routing.py
python/nyancad-mcp/: DESIGN.md  README.md  pyproject.toml
python/nyancad-mcp/nyancad_mcp/: __init__.py  config.py  couchdb.py  http.py  server.py  sse.py
python/nyancad-server/: MANIFEST.in  README.md  pyproject.toml
python/nyancad-server/nyancad_server/: __init__.py  auth.py  config.py  mcp_server.py  notebook.py  notebook_file.py  notebook_middleware.py  notebook_sax.py  oauth.py  run.py  run_sax.py  server.py
python/nyancad-server/tests/: test_mcp_helpers.py
python/nyancad/nyancad/: __init__.py  anywidget.py  api.py  netlist.py  parity_oracle.py  plot.py  schemas.py  watch.py
python/nyancad/tests/: _parity_oracle.py  conftest.py  test_api.py  test_netlist.py  test_schemas.py
python/nyancad/tests/fixtures/: models.nyanlib  top.nyancir
src/: main.rs
src/bash/: copy-vscode-assets.sh  couchdb-build-design-doc.sh  couchdb-export.sh  couchdb-upload-design-doc.sh  jekyll-build.sh  marimo-export.sh  view.json
src/main/nyancad/: hipflask.cljs
src/main/nyancad/hipflask/: util.cljs
src/main/nyancad/mosaic/: anywidget.cljs  auth.cljs  build.clj  build_hooks.clj  common.cljc  common.cljs  couchdb.cljs  editor.cljc  editor.cljs  extension.cljc  extension.cljs  filestore.cljs  frontend.cljs  jsatom.cljs  libman.cljc  libman.cljs
src/main/nyancad/mosaic/editor/: platform_test.cljs  platform_vscode.cljc  platform_vscode.cljs  platform_web.cljs
src/main/nyancad/mosaic/jsatom/: bridge.cljc  protocol.cljs  util.cljs
src/main/nyancad/mosaic/libman/: platform_test.cljs  platform_vscode.cljs  platform_web.cljs
src/marimo/: head.html  notebook.py  notebook_file.py  notebook_sax.py
src/test/nyancad/: hipflask_test.cljs
src/test/nyancad/hipflask/: util_test.cljs
src/test/nyancad/mosaic/: common_test.cljc  couchdb_test.cljs  jsatom_test.cljs  libman_test.cljc  parity_test.cljs  smoke_test.cljs
src/test/nyancad/mosaic/editor/: connectivity_test.cljc  platform_test.cljs
src/test/nyancad/mosaic/jsatom/: util_test.cljs
vscode-ext/: .vscodeignore  BUILD.md  package.json
