[package]
name = "mosaic"
version = "0.1.0"
authors = ["Pepijn de Vos <pepijndevos@gmail.com>"]
edition = "2018"

[dependencies]
vgtk = "0.3"
ngspice = { path = "../rust-ngspice/ngspice" }
cairo-rs = "0.9.0"
pretty_env_logger = "0.4"

[patch.crates-io]
vgtk = { path = "../vgtk/vgtk" }
vgtk-macros = { path = "../vgtk/macros" }