[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyancad-kfactory"
version = "0.1.0"
description = "Convert NyanCAD (Mosaic) schematics into kfactory DSchematics for layout generation"
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
authors = [
    {name = "Pepijn de Vos", email = "me@pepijndevos.nl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nyancad",
    "kfactory",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/NyanCAD/Mosaic"
Repository = "https://github.com/NyanCAD/Mosaic"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyancad_kfactory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
