[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyancad-mcp"
version = "0.1.0"
description = "MCP server for NyanCAD circuit operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [
    { name = "Pepijn de Vos" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "nyancad>=0.4.0",
]

[project.scripts]
nyancad-mcp = "nyancad_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nyancad_mcp*"]
