[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyancad-server"
version = "0.19.2"
description = "NyanCAD server package with marimo integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
authors = [
    {name = "Pepijn de Vos", email = "me@pepijndevos.nl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "marimo>=0.19.0",
    "uvicorn[standard]>=0.23.0",
    "nyancad>=0.18.2",
    "httpx>=0.25.0",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
sax = ["sax>=0.18.0", "kfnetlist>=0.1.4"]

[project.urls]
Homepage = "https://github.com/NyanCAD/Mosaic"
Repository = "https://github.com/NyanCAD/Mosaic"

[project.scripts]
nyancad-server = "nyancad_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyancad_server*"]

[tool.setuptools.package-data]
nyancad_server = ["public/**/*", "notebook.py", "notebook_file.py", "notebook_sax.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.19.2"
commit = true
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
