[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyancad"
version = "0.18.0"
description = "NyanCAD Python library for schematic editor with anywidget integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
authors = [
    {name = "Pepijn de Vos", email = "me@pepijndevos.nl"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anywidget>=0.9.0",
    "traitlets",
    "InSpice",
    'vacask-bin>=0.3.3.dev0; platform_machine != "wasm32"',
    "holoviews",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "kfnetlist>=0.1.4"]

[project.urls]
Homepage = "https://github.com/NyanCAD/Mosaic"
Repository = "https://github.com/NyanCAD/Mosaic"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyancad*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.18.0"
commit = true
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
